--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav>
                             
              <div class="nav-img">
-                <img src="../imagenes/LOGO.svg" alt="logo coder">
+                <img src="./imagenes/LOGO.svg" alt="logo coder">
              </div>
 
 
@@ -55,13 +55,13 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../imagenes/local-capo-frente.jpg" class="d-block w-100" alt="...">
+            <img src="./imagenes/local-capo-frente.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../imagenes/palmeras-carrusel.jpg" class="d-block w-100" alt="...">
+            <img src="./imagenes/palmeras-carrusel.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../imagenes/vitrina-helado.jpg" class="d-block w-100" alt="...">
+            <img src="./imagenes/vitrina-helado.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
