--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="ul-nav">
                         <ul>
                             <li>
-                                <a href="../index.html" class="linkNav">HOME</a>
+                                <a href="./index.html" class="linkNav">HOME</a>
                             </li>
                                 <li >
                                     <a href="productos.html" class="linkNav"> PRODUCTOS</a>
