--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <a href="./index.html" class="linkNav">HOME</a>
                             </li>
                                 <li >
-                                    <a href="productos.html" class="linkNav"> PRODUCTOS</a>
+                                    <a href="./pages/pedidos.html" class="linkNav"> PEDIDOS</a>
                                 </li>
                                     <li>
                                         <a href="./pages/contacto.html" class="linkNav">CONTACTO</a>
@@ -42,7 +42,7 @@
                                         <a href="./pages/quienessomos.html" class="linkNav">QUIENES SOMOS</a>
                                         </li>
                                     <li>
-                                    <a href="ayuda.html" class="linkNav">AYUDA</a>
+                                    <a href="./pages/ayuda.html" class="linkNav">AYUDA</a>
                                     </li>
                         </ul>
                     </div>
@@ -80,8 +80,8 @@
     <div class="img-train-main">
         <img src="./imagenes/ico-tren.png" alt="">
     </div>
-           <div class="textos">
-                   <p class="">Nuestros origenes</p>
+           <div class="textos-main">
+                   <h3 class="">Nuestros origenes</h3>
                    <h2 class="">QUIÉNES SOMOS</h2>
                    <p>La historia de Capo Bonifati nos traslada a un pueblecito del sur de Italia,
                       <span> Bonifati,famoso por su helado artesano, el lugar donde nació nuestra familia,</span>
@@ -110,7 +110,7 @@
     </div>
                             <div class="box-product">
                                 <div>
-                                    <a href="./pages/productos.html"><img src="imagenes/producto-1.jpg" alt="imagen-producto"></a>
+                                    <a href="./pages/pedidos.html"><img src="imagenes/producto-1.jpg" alt="imagen-producto"></a>
                                     <h3>Helados Artesanales</h3>
                                 </div>
                                         <div>
@@ -239,6 +239,8 @@
         
     
 </section>  
+
+<!--FOOTER-->
 
 <footer>
     <div class="separator-footer">
