--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -26,16 +26,16 @@
                         <a href="../index.html" class="linkNav">HOME</a>
                     </li>
                         <li >
-                            <a href="productos.html" class="linkNav"> PRODUCTOS</a>
+                            <a href="./pedidos.html" class="linkNav"> PEDIDOS</a>
                         </li>
                             <li>
-                                <a href="contacto.html" class="linkNav">CONTACTO</a>
+                                <a href="./contacto.html" class="linkNav">CONTACTO</a>
                             </li>
                                 <li>
-                                <a href="./pages/quienessomos.html" class="linkNav">QUIENES SOMOS</a>
+                                <a href="./quienessomos.html" class="linkNav">QUIENES SOMOS</a>
                                 </li>
                             <li>
-                            <a href="ayuda.html" class="linkNav">AYUDA</a>
+                            <a href="./ayuda.html" class="linkNav">AYUDA</a>
                             </li>
                 </ul>
             </div>
@@ -55,13 +55,13 @@
             <div class="box-train">
                 <div class="box-text-train">
                     <h3>UN VIAJE A ITALIA</h3>
-                <p>La historia de nuestra heladería se remonta muchos años atrás…  Bonifati, un pequeño pueblecito al sur de Italia y lugar de nacimiento de Antonio,
+                     <p>La historia de nuestra heladería se remonta muchos años atrás…  Bonifati, un pequeño pueblecito al sur de Italia y lugar de nacimiento de Antonio,
                      “El nonno”, junto al resto de su familia. Una familia de heladeros artesanos que separada por la guerra tuvo que emigrar a América y empezar de cero…</p>
-                <p>Hace unos años, los descendientes de aquella familia regresamos a nuestras raíces, en un viaje para lograr trasmitir la esencia de toda su tradición heladera y artesanal.</p>   
+                    <p>Hace unos años, los descendientes de aquella familia regresamos a nuestras raíces, en un viaje para lograr trasmitir la esencia de toda su tradición heladera y artesanal.</p>   
                 </div>
-              <div class="img-train">
-                <img src="../imagenes/tren2.png" alt="img-tren">
-              </div>
+                    <div class="img-train">
+                        <img src="../imagenes/tren2.png" alt="img-tren">
+                    </div>
             </div>
                 <div class="img-estacion">
                     <img src="../imagenes/estacion-capo.png" alt="img-estacion">
