--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,37 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-   <!--boostrap-->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
-    <!--css-->
-    <link rel="stylesheet" href="../css/boostrap.css">
+    <title>Contacto</title>
+     <!--css-->
+     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <!--carrusel boostrap-->
+    <header>
+        <nav>
+                    
+     <div class="nav-img">
+        <img src="../imagenes/LOGO.svg" alt="logo coder">
+     </div>
 
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../imagenes/local-capo-frente.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../imagenes/palmeras-carrusel.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../imagenes/vitrina-helado.jpg" class="d-block w-100" alt="...">
-          </div>
+
+            <div class="ul-nav">
+                <ul>
+                    <li>
+                        <a href="../index.html" class="linkNav">HOME</a>
+                    </li>
+                        <li >
+                            <a href="./pedidos.html" class="linkNav"> PEDIDOS</a>
+                        </li>
+                            <li>
+                                <a href="./contacto.html" class="linkNav">CONTACTO</a>
+                            </li>
+                                <li>
+                                <a href="./quienessomos.html" class="linkNav">QUIENES SOMOS</a>
+                                </li>
+                            <li>
+                            <a href="./ayuda.html" class="linkNav">AYUDA</a>
+                            </li>
+                </ul>
+            </div>
+        </nav>
+
+</header>
+
+<!--Contacto-->
+    <main class="contacto-seccion">
+        <div>
+            <h2>Contacta con Nosotros</h2>
+            <p> Av. Plutarco 61 29010 Málaga</p>
+            <p> 952 91 72 91</p>
+            <p> info@capobonifati.co</p>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+        <div>
+            <img src="../../imagenes/contacto/capo-bonifati-contacto.jpg" alt="">
+        </div>
+    </main>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!--Formulario-->
+    <section class="formulario-seccion">
+        <div>
+            <form action=""></form>
+        </div>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2740.16551174332!2d-4.479686022102132!3d36.72155128454938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f7da56446a35%3A0xedc501271c6e90bf!2sCapo%20Bonifati%20Gelato!5e0!3m2!1ses!2ses!4v1712310972754!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
+
+    <!--FOOTER-->
+    <footer>
+        <div class="separator-footer">
+          <img src="./imagenes/separador-footer.svg" alt="separator-footer">
+        </div>
+              <div class="cont-footer">
+                  <div class="foot-info">
+                      <h4>Donde estamos</h4>
+                          <ul>
+                              <li>Dirección: Av. Plutarco 61</li>
+                              <li>29010 Málaga</li>
+                              <li>Horario: LU a DO de 11 a 2 h.</li>
+                          </ul>
+                  </div>
+                       <div class="foot-info">
+                          <h4>Contacto</h4>
+                          <ul>
+                              <li>Teléfono: 952 91 72 91</li>
+                              <li>Email: info@capobonifati.com</li>
+                          </ul>
+                       </div>
+                           <div class="foot-info">
+                              <h4>Capo Bonifati</h4>
+                              <ul>
+                                  <li><a href="index.html">Inicio</a></li>
+                                  <li><a href="pages/productos.html">Productos</a></li>
+                                  <li><a href="pages/quisomos.html">Quienes Somos</a></li>
+                                  <li><a href="pages/contacto.html"></a></li>
+                                  <li><a href="pages/ayuda.html"></a></li>
+                              </ul>
+                           </div>
+                               <div class="foot-info">
+                                  <h4>Siguenos</h4>
+                                  <ul>
+                                      <li>Istagram</li>
+                                      <li>Facebook</li>
+                                      <li>Twitter</li>
+                                      <li>Tik-Tok </li>
+                                  </ul>
+                               </div>
+              </div>
+    </footer>
 </body>
 </html>
