3ra entrega vacca fernandez arreglo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,7 +63,7 @@
               </ul>
         </div>
         <div class="img-contacto">
-            <img src="../../imagenes/contacto/capo-bonifati-contacto.jpg" alt="">
+            <img src=".././imagenes/contacto/capo-bonifati-contacto.jpg" alt="">
         </div>
     </main>
 
