3ra entrega vacca fernandez arreglo 2

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="container-fluid">
                   <div class="logo-boton">
                       <div>
-                        <a class="navbar-brand" href="../index.html"><img src="../imagenes/LOGO.svg" ></a>
+                        <a class="navbar-brand" href="../index.html"><img src="./imagenes/LOGO.svg" ></a>
                       </div>
                           <div> 
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
